Implemented MostPopular and MostRecent navBars, all controllers working with the database through services and repository pattern plus added PartialVicoveView

--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/BaiGanio.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/BaiGanio.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+    <partial name="~/Views/Shared/_VicovePartial.cshtml" />
         <div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item list-group-item-primary">
