--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Blondinki.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Blondinki.cshtml
@@ -2,26 +2,10 @@
 @using AspNetCoreTemplate.Web.Infrastructure
 @model PaginatedList<VicoveViewModel>
 @*
+
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div>
-    <ul class="list-group list-group-flush">
-        @foreach (var vic in Model)
-        {
-            <li class="list-group-item list-group-item-primary">
-                <p>
-                    @vic.Content
-                </p>
-            </li>
-        }
-    </ul>
-    <a asp-action="Blondinki" asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default">
-        Previous
-    </a>
-    <a asp-action="Blondinki" asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default">
-        Next
-    </a>
-</div>
+<partial name="~/Views/Shared/_VicovePartial.cshtml"/>
