Major UI changes

--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Create.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Create.cshtml
@@ -19,7 +19,7 @@
         <label asp-for="Content">Напиши вица</label>
         <textarea asp-for="Content" class="form-control" rows="5"></textarea>
 
-        <input type="submit" value="Качи" class="btn btn-default" />
+        <input type="submit" value="Изпрати" class="btn btn-default" />
     </form>
 </div>
 
