--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
@@ -19,27 +19,27 @@
 </head>
 <body style="background-color: lightgray">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3" style="background-color: chocolate;">
+        <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3" style="background-color:chocolate">
             <div class="container" style="font-size:large">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@GlobalConstants.SystemName</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="collapse navbar-collapse d-sm-inline-flex flex-sm-row-reverse" id="navbarNav">
                     <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 mr-auto mt-2 mt-lg-0" >
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Начална страница</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Начална страница</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vicove" asp-action="MostPopular">Най-популярни</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Vicove" asp-action="NaiPopulqrni">Най-популярни</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vicove" asp-action="MostRecent">Най-нови</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Vicove" asp-action="NaiNovi">Най-нови</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vicove" asp-action="Create">Качи виц</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Vicove" asp-action="Create">Качи виц</a>
                         </li>
                         @*<li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
@@ -60,20 +60,20 @@
                 <div class="row">
                     <div class="list-group-horizontal-md-2"  style="font-family:cursive">
                         <p class="text-center">Категории:</p>
-                        <a href="/Vicove/Blondinki" class="list-group-item list-group-item-action active">Блондинки</a>
-                        <a href="/Vicove/BaiGanio" class="list-group-item list-group-item-action active">Бай Ганьо</a>
-                        <a href="/Vicove/Zhivotni" class="list-group-item list-group-item-action active">Животни</a>
-                        <a href="/Vicove/IvanchoIMariika" class="list-group-item list-group-item-action active">Иванчо и Марийка</a>
-                        <a href="/Vicove/Ludi" class="list-group-item list-group-item-action active">Луди</a>
-                        <a href="/Vicove/Laforizmi" class="list-group-item list-group-item-action active">Лафоризми</a>
-                        <a href="/Vicove/Mutri" class="list-group-item list-group-item-action active">Мутри</a>
-                        <a href="/Vicove/Mrusni" class="list-group-item list-group-item-action active">Мръсни</a>
-                        <a href="/Vicove/Policai" class="list-group-item list-group-item-action active">Полицаи</a>
-                        <a href="/Vicove/Piqnici" class="list-group-item list-group-item-action active">Пияници</a>
-                        <a href="/Vicove/CherenHumor" class="list-group-item list-group-item-action active">Черен хумор</a>
+                        <a href="/Vicove/Blondinki" class="list-group-item list-group-item-action blueBtn" >Блондинки</a>
+                        <a href="/Vicove/BaiGanio" class="list-group-item list-group-item-action blueBtn">Бай Ганьо</a>
+                        <a href="/Vicove/Zhivotni" class="list-group-item list-group-item-action blueBtn">Животни</a>
+                        <a href="/Vicove/IvanchoIMariika" class="list-group-item list-group-item-action blueBtn">Иванчо и Марийка</a>
+                        <a href="/Vicove/Ludi" class="list-group-item list-group-item-action blueBtn">Луди</a>
+                        <a href="/Vicove/Laforizmi" class="list-group-item list-group-item-action blueBtn">Лафоризми</a>
+                        <a href="/Vicove/Mutri" class="list-group-item list-group-item-action blueBtn">Мутри</a>
+                        <a href="/Vicove/Mrusni" class="list-group-item list-group-item-action blueBtn">Мръсни</a>
+                        <a href="/Vicove/Policai" class="list-group-item list-group-item-action blueBtn">Полицаи</a>
+                        <a href="/Vicove/Piqnici" class="list-group-item list-group-item-action blueBtn">Пияници</a>
+                        <a href="/Vicove/CherenHumor" class="list-group-item list-group-item-action blueBtn">Черен хумор</a>
                     </div>
 
-                    <div class="col-md-8" style="background-color: lightgray; color: dimgray; font-family: 'Malgun Gothic'">
+                    <div class="col-md-8" style="background-color: lightgray; color: #2A3132; font-family: 'Malgun Gothic'">
                         @this.RenderBody()
                     </div>
 
@@ -85,7 +85,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted text-dark" style="background-color: chocolate;">
+    <footer class="border-top footer navbar-light" style="background-color:chocolate">
         <div class="container">
             &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
@@ -105,7 +105,6 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
     @this.RenderSection("Scripts", required: false)
 </body>
 </html>
