--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
@@ -6,15 +6,16 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <div>
-    <ul class="list-group list-group-flush">
+    <ul class="list-group list-group-flush" style="background-color: lightblue">
         @foreach (var vic in Model)
         {
-            <li class="list-group-item list-group-item-primary">
+            <li class="list-group-item" style="background-color: lightcyan">
                 <p>
                     @vic.Content
                 </p>
-
-                <i class="far fa-thumbs-up"></i>
+                <form>
+                    <span class="far fa-thumbs-up active" ></span>
+                </form>
             </li>
         }
     </ul>
@@ -44,3 +45,11 @@
         </ul>
     </nav>
 </div>
+
+<script>
+    $("a").click(function () {
+        $("a").addClass("active");
+    })
+
+    })
+</script>
