Implemented signalR Voting system with like button.

--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
@@ -59,7 +59,6 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="list-group-horizontal-md-2"  style="font-family:cursive">
-                        <p class="text-center">Категории:</p>
                         <a href="/Vicove/Blondinki" class="list-group-item list-group-item-action blueBtn" >Блондинки</a>
                         <a href="/Vicove/BaiGanio" class="list-group-item list-group-item-action blueBtn">Бай Ганьо</a>
                         <a href="/Vicove/Zhivotni" class="list-group-item list-group-item-action blueBtn">Животни</a>
@@ -78,7 +77,7 @@
                     </div>
 
                     <div class="container-md-2">
-                        <h1> reklami</h1>
+                        <h1></h1>
                     </div>
                 </div>
             </div>
@@ -96,6 +95,7 @@
         <script src="~/lib/jquery-validation/dist/jquery.validate.js" asp-append-version="true"></script>
         <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
+        <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
@@ -103,6 +103,7 @@
         <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
         <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
+        <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
     @this.RenderSection("Scripts", required: false)
