--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Blondinki.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Blondinki.cshtml
@@ -8,4 +8,6 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<partial name="~/Views/Shared/_VicovePartial.cshtml"/>
+<partial name="~/Views/Shared/_VicovePartial.cshtml" />
+<script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
+<script src="~/js/site.js"></script>
