--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Create.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using AspNetCoreTemplate.Data.Models
 @using AspNetCoreTemplate.Web.ViewModels.Vicove
-@model VicoveViewModel
+@model VicReviewViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
