--- a/Web/AspNetCoreTemplate.Web/wwwroot/css/site.css
+++ b/Web/AspNetCoreTemplate.Web/wwwroot/css/site.css
@@ -2,19 +2,19 @@
 for details on configuring this project to bundle and minify static web assets. */
 a.blueBtn {
     outline-color: black;
-    background-color: dodgerblue;
+    background-color: turquoise;
     border-color: #90AFC5;
     border: 1px thin black;
     color: white;
 }
 
     a.blueBtn:hover {
-        background-color: #0275d8;
+        background-color: darkturquoise;
         color: white;
     }
 
 a.blueActive {
-    background-color: #0275d8;
+    background-color: darkturquoise;
     color: white;
 }
 
