UI changes of the like button and the Leaderboard

--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
@@ -13,9 +13,9 @@
                 <p>
                     @vic.Content
                 </p>
-                <button data-id="@vic.Id" type="button" class="like-button">
-                    <i class="fa fa fa-thumbs-up"></i>
-                    |
+                <button data-id="@vic.Id" class="@vic.Id btn like-button likeButton">
+                    Харесване
+                    <i class="far fa-thumbs-up @vic.Id"></i>
                     <span class="@vic.Id">@vic.Points</span>
                 </button>
                 <p class="@vic.Id"></p>
