--- a/Web/AspNetCoreTemplate.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username">Потребителско име</label>
-                <input asp-for="Username" class="form-control" disabled />
+                <input asp-for="Username" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber">Телефонен номер</label>
