MyProfile, FavouriteVicove and Uploaded vicove + UI changes

--- a/Web/AspNetCoreTemplate.Web/Views/Home/Index.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Най-новите и популярни вицове!</h2>
 
-<div>
+@*<div>
     <span>Виц на деня</span>
     <p>@Model.Content</p>
-</div>
+</div>*@
