--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                         </li>
                         @if (signInManager.IsSignedIn(User))
                         {
-                            <li class="nav-item text-right">
+                            <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="MyProfile" asp-action="Index">Моят профил</a>
                             </li>
                         }
