--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/NaiNovi.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/NaiNovi.cshtml
@@ -5,57 +5,67 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<div>
-    <ul class="list-group list-group-flush" style="background-color: lightblue">
-        @foreach (var vic in Model)
-        {
-            <li class="list-group-item list-group-item-primary">
-                @*style="background-color: lightcyan"*@
-                <p>
-                    @vic.Content
-                </p>
-                <button data-id="@vic.Id" class="@vic.Id btn like-button likeButton">
-                    Харесване
-                    <i class="far fa-thumbs-up @vic.Id"></i>
-                    <span class="@vic.Id">@vic.Points</span>
-                </button>
-                <p class="@vic.Id"></p>
-            </li>
-        }
-    </ul>
+    <div>
+        <ul class="list-group list-group-flush" style="background-color: lightblue">
+            @foreach (var vic in Model)
+            {
+                <li class="list-group-item list-group-item-primary">
+                    @*style="background-color: lightcyan"*@
+                    <p>
+                        @vic.Content
+                    </p>
 
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            @if (Model.GetHasPreviousPage)
-            {
-                <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex - 1)">Предишна</a></li>
+                    <button data-id="@vic.Id" class="@vic.Id btn like-button likeButton">
+                        Харесване
+                        <i class="far fa-thumbs-up @vic.Id"></i>
+                        <span class="@vic.Id">@vic.Points</span>
+                    </button>
+
+                    <button data-id="@vic.Id" class="@vic.Id btn add-favourite favButton">
+                        Добави към любими
+                    </button>
+
+                    <span style="white-space: nowrap; float:right">
+                        @vic.CreatedOn.Date.ToShortDateString()
+                    </span>
+
+                    <p class="@vic.Id"></p>
+                </li>
             }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Предишна</a></li>
-            }
-            @for (int i = 1; i <= Model.TotalPages; i++)
-            {
-                if (Model.PageIndex == i)
+        </ul>
+
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                @if (Model.GetHasPreviousPage)
                 {
-                    <li class="page-item active"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex - 1)">Предишна</a></li>
                 }
                 else
                 {
-                    <li class="page-item"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    <li class="page-item disabled"><a class="page-link">Предишна</a></li>
                 }
-            }
-            @if (Model.HasNextPage)
-            {
-                <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex + 1)">Следваща</a></li>
-            }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Следваща</a></li>
-            }
-        </ul>
-    </nav>
-</div>
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    if (Model.PageIndex == i)
+                    {
+                        <li class="page-item active"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    }
+                    else
+                    {
+                        <li class="page-item"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    }
+                }
+                @if (Model.HasNextPage)
+                {
+                    <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex + 1)">Следваща</a></li>
+                }
+                else
+                {
+                    <li class="page-item disabled"><a class="page-link">Следваща</a></li>
+                }
+            </ul>
+        </nav>
+    </div>
 <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
 <script src="~/js/site.js"></script>
 <script serc="/signalr/hubs"></script>
