--- a/Web/AspNetCoreTemplate.Web/Views/MyProfile/Favourite.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/MyProfile/Favourite.cshtml
@@ -18,10 +18,10 @@
         </div>
 
         <div class="col-sm-6">
-            <ul class="list-group list-group-flush" style="background-color: lightblue">
+            <ul class="list-group list-group-flush">
                 @foreach (var vic in Model)
                 {
-                    <li class="list-group-item list-group-item-primary">
+                    <li class="list-group-item list-group-item-primary" style="border-radius: 15px; padding: 15px; border: thin 2px lightblue; background-color: lightblue">
                         @*style="background-color: lightcyan"*@
                         <p>
                             @vic.Content
