--- a/Web/AspNetCoreTemplate.Web/Views/MyProfile/Index.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/MyProfile/Index.cshtml
@@ -10,18 +10,18 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-sm-3">
+        <div class="col-md-3">
             <div class="list-group-horizontal-md-2" style="font-family:cursive">
                 <a href="/MyProfile/Index" class="list-group-item list-group-item-action blueBtn">Моите вицове</a>
                 <a href="/MyProfile/Favourite" class="list-group-item list-group-item-action blueBtn">Любими вицове</a>
             </div>
         </div>
 
-        <div class="col-sm-6">
-            <ul class="list-group list-group-flush" style="background-color: lightblue">
+        <div class="col-md-6">
+            <ul class="list-group list-group-flush">
                 @foreach (var vic in Model)
                 {
-                    <li class="list-group-item list-group-item-primary">
+                    <li class="list-group-item list-group-item-primary" style="border-radius: 15px; padding: 15px; border: thin 2px lightblue; background-color: lightblue">
                         @*style="background-color: lightcyan"*@
                         <p>
                             @vic.Content
@@ -63,7 +63,7 @@
             </nav>
         </div>
 
-        <div class="container-sm-3">
+        <div class="container-md-3">
             <div class="boxx">
                 <span style="font-size: 20px;">Общо харесвания</span>
                 <i class="far fa-thumbs-up" style="font-size: 20px; justify-content:left; color: lightgray"></i>
