--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+@using Microsoft.AspNetCore.Identity
 @using AspNetCoreTemplate.Data.Models
 @using AspNetCoreTemplate.Common
 @inject SignInManager<ApplicationUser> signInManager
@@ -13,12 +14,15 @@
         <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/lib/fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="~/favicon.ico">
     </environment>
     <environment names="Staging,Production">
         <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/lib/fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="~/favicon.ico">
     </environment>
+    @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body style="background-color: lightgray">
     <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 sticky-top" style="background-color:lightgray">
@@ -104,7 +108,7 @@
 
     <footer class="border-top footer navbar-light" style="background-color:#294972">
         <div class="container">
-            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - М.Петров - <a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
         </div>
     </footer>
 
