--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_LayoutWithoutVicCategories.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_LayoutWithoutVicCategories.cshtml
@@ -13,11 +13,13 @@
         <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/lib/fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="~/favicon.ico">
     </environment>
     <environment names="Staging,Production">
         <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/lib/fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="~/favicon.ico">
     </environment>
 </head>
 <body style="background-color: lightgray">
@@ -103,7 +105,7 @@
 
     <footer class="border-top footer navbar-light" style="background-color:#294972">
         <div class="container">
-            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - М.Петров - <a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
         </div>
     </footer>
 
